# VideoTemp

./: README.md  del_build.sh  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/shell/ffmpeg/: build_android.sh
app/shell/sox/: build_android.sh
app/src/androidTest/java/com/cain/videotemp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/audio/: mp3_encode.cpp  mp3_encode.h
app/src/main/cpp/ffmpeg/video/: ffpmeg_filter_manager.cpp  ffpmeg_filter_manager.h
app/src/main/cpp/lame/: fft.c
app/src/main/cpp/opengl/: EglCore.cpp  EglCore.h  EglSurfaceBase.cpp  EglSurfaceBase.h  GLRender.cpp  GLRender.h  GlUtils.cpp  GlUtils.h  Looper.cpp  MyLooper.h  Triangle.cpp  Triangle.h  WindowSurface.cpp  WindowSurface.h  shader_utils.cpp  shader_utils.h
app/src/main/cpp/sox/: sox_reverb_effect.cpp
app/src/main/java/com/cain/videotemp/: FfmpegFilterActivity.kt  MainActivity.kt  SimpleRenderActivity.kt
app/src/main/java/com/cain/videotemp/audio/: Mp3Encoder.kt  OpenSLEsDelegate.kt  SoxUtils.kt
app/src/main/java/com/cain/videotemp/ffmpeg/: FfmpegFilter.kt
app/src/main/java/com/cain/videotemp/pic/opengl/: BitmapDrawer.kt  EglCore.kt  EglSurfaceBase.kt  NativeRender.kt  OpenGLTools.kt  SimpleRender.kt  WindowSurface.kt
app/src/main/java/com/cain/videotemp/pic/opengl/filter/: BaseImageFilter.kt  OESInputFilter.kt
app/src/main/java/com/cain/videotemp/pic/opengl/render/: EGLRender.kt  NativeRender.kt  SimpleRender.kt
app/src/main/java/com/cain/videotemp/video/: FFVideoPlayer.kt  FFmpegFilterManager.kt  Frame.kt  SimpleVideoPlayerActivity.kt
app/src/main/java/com/cain/videotemp/video/decoder/: AudioDecoder.kt  BaseDecoder.kt  IDecoder.kt  VideoDecoder.kt
app/src/main/java/com/cain/videotemp/video/listener/: IDecoderProgress.kt  IDecoderStateListener.kt
app/src/main/java/com/cain/videotemp/video/media/: AudioExtractor.kt  DecodeState.kt  IExtractor.kt  MMExtractor.kt  VideoExtractor.kt
app/src/main/res/layout/: activity_ffmpeg_filter.xml  activity_main.xml  activity_simple_render.xml  activity_simple_video_player.xml
app/src/main/res/values/: attrs.xml  strings.xml
app/src/test/java/com/cain/videotemp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
